# Generated by Django 4.2.3 on 2024-03-23 19:07

from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):

    dependencies = [
        ('estacionamentos', '0007_rename_idestaionamento_historico_idestacionamento'),
    ]

    operations = [
        migrations.CreateModel(
            name='Locacao',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('dataEntrada', models.DateTimeField(auto_now_add=True, verbose_name='Data e hora que o veículo entrou no estacionamento')),
                ('dataSaida', models.DateTimeField(auto_now=True, verbose_name='Data e hora que o veículo entrou no estacionamento')),
                ('valor', models.DecimalField(decimal_places=2, max_digits=5, verbose_name='Valor do pagamento')),
                ('placaCarro', models.CharField(max_length=7, verbose_name='Placa do veículo')),
                ('flannerPrime', models.BooleanField(default=False, verbose_name='Veículo é assinante do Flanner Prime')),
                ('idEstacionamento', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='estacionamentos.estacionamento', verbose_name='Id do Estacionamento')),
            ],
        ),
        migrations.RemoveField(
            model_name='veiculoestacionado',
            name='idEstacionamento',
        ),
        migrations.DeleteModel(
            name='Historico',
        ),
        migrations.DeleteModel(
            name='VeiculoEstacionado',
        ),
    ]
