@startuml "Banco de Dados"
class Empresa{
    nome : String
    email : String
    senha : String
    telefone : String
    cnpj : String
}

class Estacionamento{
    cep : String
    estado : String
    numero : String
    cidade : String
    bairro : String
    rua : String
    lotacao : float
}

class Locacao{
    horarioEntrada : Time
    horarioSaida : Time
    data : Date
    valor : float
    placaVeiculo : String
    flannerPrime : boolean
}

class GerenteGeral
class GerenteLocal

class Usuario{
    nome : String
    email : String
    senha : String
    cpf : String
    telefone : String
}

Empresa "1" -right- "0..*" Estacionamento : possui >
Empresa "1" -- "0..*" GerenteLocal : possui >
Empresa "1" -- "1" GerenteGeral : possui >
Estacionamento "1" -right- "0..*" Locacao : possui >
Estacionamento "1" -- "1" GerenteLocal : possui >
GerenteGeral --|> Usuario
GerenteLocal --|> Usuario

@enduml